flagger/quarkus/quarkus-multimodule.yaml
apiVersion: v1
kind: Service
metadata:
  name: multimodule
  namespace: multimodule
  labels:
    app: multimodule
    service: multimodule
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: multimodule
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multimodule
  namespace: multimodule
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multimodule
      version: v1
  template:
    metadata:
      labels:
        app: multimodule
        version: v1
    spec:
      serviceAccountName: multimodule
      containers:
      - image: robertosrjr/multi-module:latest
        imagePullPolicy: IfNotPresent
        name: multimodule
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /q/health/ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /q/health/live
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
