flagger/quarkus/quarkus.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus
  namespace: quarkus
  labels:
    app: quarkus
    service: quarkus
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: quarkus
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus
  namespace: quarkus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus
      version: v1
  template:
    metadata:
      labels:
        app: quarkus
        version: v1
    spec:
      serviceAccountName: quarkus
      containers:
      - image: robertosrjr/microprofile:v0.1
        imagePullPolicy: IfNotPresent
        name: quarkus
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /q/health/ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /q/health/live
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
